# daikoku

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG  CLAUDE.md  LIFECYCLE_TODO.md  SECURITY.md  TEST_COVERAGE.md  licences.md  mise.toml  readme.md
cli/: Cargo.toml  README.md  test4
cli/cms/.daikoku/: .environments
cli/cms/src/: summary.json
cli/cms/src/blocks/: Card.html  Footer.html  User card.html  WRAPPER.html  navbar.html  plans.html
cli/cms/src/blocks/wrapper/: page.html
cli/cms/src/data/: preview.json
cli/cms/src/pages/: 404.html  APIS.html  Home.html  Mes teams.html  MonEquipe.html  foo.html  index.html  page.html  test.html
cli/cms/src/pages/404/: page.html
cli/cms/src/pages/api/: page.html
cli/cms/src/scripts/: ApiKeyManager.js  apikey_manager.js  js.js
cli/cms2/src/blocks/: Card.html
cli/cms2/src/pages/: APIS.html
cli/coucou/dev/.daikoku/: .environments
cli/coucou/dev/blocks/: IAAS-BASIC-footer.html  IAAS-BASIC-navbar.html  IAAS-BASIC-template.html  MODAL-donnees-personnelles.html  MODAL-formulaire-contact.html  MODAL-mentions-legales.html  MODAL-success.html  bloc-offre-side.html
cli/coucou/dev/pages/: home.html  offre-auto-cc.html  offre-corporelle.html  offre-edpm.html  offre-moto.html  offre-mrh-jeunes.html  offre-mrh.html  offre-travailleur-independant.html  offre-velo.html  parcours-affiliation-digitale.html  parcours-api.html  parcours-devis.html  parcours-simulation.html  parcours-souscription.html  univers-mobilite.html  univers-vie-quotidienne-pro.html
cli/coucou/dev/scripts/: MODAL-js.js  navbar-js.js
cli/coucou/dev/src/blocks/: IAAS-BASIC-footer.html  IAAS-BASIC-navbar.html  IAAS-BASIC-template.html  MODAL-donnees-personnelles.html  MODAL-formulaire-contact.html  MODAL-mentions-legales.html  MODAL-success.html  bloc-offre-side.html
cli/coucou/dev/src/pages/: Old unlogged home.html  blocksIAAS-BASIC-footer.html  blocksIAAS-BASIC-navbar.html  blocksIAAS-BASIC-template.html  blocksMODAL-donnees-personnelles.html  blocksMODAL-formulaire-contact.html  blocksMODAL-mentions-legales.html  blocksMODAL-success.html  blocksbloc-offre-side.html  home.html  offre-auto-cc.html  offre-corporelle.html  offre-edpm.html  offre-moto.html  (+11 more)
cli/my-first-cms/src/pages/: API.html
cli/src/: bin.rs  error.rs  helpers.rs  interactive.rs  logger.rs  plugin.rs  utils.rs  watch.rs
cli/src/commands/: assets.rs  cms.rs  commands.md  configuration.rs  creation.rs  enviroments.rs  environments.rs  generate.rs  initialization.rs  login.rs  mod.rs  projects.rs  pull.rs  push.rs  source.rs  sync.rs  version.rs  watch.rs
cli/src/logging/: error.rs  logger.rs
cli/src/models/: folder.rs
cli/templates/: manager.html  session_expired.html  update.sh
cli/tests/: assets.rs  cli.rs  cms.rs  creation.rs  enviroments.rs  environments.rs  generate.rs  login.rs  projects.rs  pull.rs  push.rs  setup.rs  version.rs
cli/tests/cli/commands/: assets.rs  cli.rs  cms.rs  environment.rs  mod.rs
cli/tests/commands/: cli.rs
cli/tests/resources/: .gitignore  daikoku-state-template.ndjson  daikoku-state.ndjson
cli/tests/resources/hsperfdata_demiourgos728/: 1
(+2566 files in other folders)
