[package]
name = "daikokucli"
version = "0.0.1"
edition = "2021"
authors = ["Zwiterrion <etienne.anne@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "A CLI to create and build WASM binaries"
readme = "README.md"
homepage = "https://github.com/MAIF/wasmo"
repository = "https://github.com/MAIF/wasmo"
keywords = ["cli", "wasm", "build", "webassembly"]
categories = ["command-line-utilities"]

[[bin]]
name = "wasmo"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
home = "0.5.5"
paris = {version = "1.5"}
zip-extensions = "0.6.2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"
lazy_static = "1.4.0"
serde = { version = "1.0.189", features = ["derive"] }
toml = "0.8.2"
futures-util = "0.3.28"
http-body-util = "0.1"
bytes = "1.5.0"
error-stack = "0.4.1"
dirs = "5.0.1"
chrono = "0.4.31"
once_cell = "1.18.0"
hyper-tls = "0.5.0"
base64 = "0.21.5"
futures-channel = "0.3.29"
configparser = "3.0.4"
async-recursion = "1.0.5"

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dev-dependencies]
serial_test = "2.0.0"
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.0.13"
