[package]
name = "daikoku"
version = "1.4.0"
edition = "2021"
authors = ["Zwiterrion <etienne.anne@icloud.com>"]
license = "MIT OR Apache-2.0"
description = "A CLI to create and build WASM binaries"
readme = "README.md"
homepage = "https://github.com/MAIF/daikoku/tree/cli"
repository = "https://github.com/MAIF/daikoku/tree/cli"
keywords = ["cli", "wasm", "build", "webassembly"]
categories = ["command-line-utilities"]

[[bin]]
name = "daikoku"
path = "src/bin.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
home = "0.5.5"
paris = {version = "1.5"}
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0.133"
lazy_static = "1.4.0"
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.2"
futures-util = "0.3.28"
http-body-util = "0.1"
bytes = "1.11.1"
error-stack = "0.4.1"
dirs = "5.0.1"
chrono = "0.4.31"
once_cell = "1.18.0"
hyper-tls = "0.5.0"
base64 = "0.22.1"
futures-channel = "0.3.29"
configparser = "3.0.4"
async-recursion = "1.0.5"
serde_yaml = "0.9.32"
void = "1.0.2"
walkdir = "2.5.0"
webbrowser = "1.0.2"
testcontainers = "0.23.1"
slug = "0.1.5"
regex = "1.11.1"
zip = "2.2.1"
mime_guess = "2.0.5"
openssl = { version = "0.10.75", features = ["vendored"] }

[dependencies.uuid]
version = "1.7.0"
features = ["v4", "fast-rng", "macro-diagnostics"]

[dev-dependencies]
serial_test = "3.1.1"
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.0.13"

